Whitespace fix

--- a/style/_comments.scss
+++ b/style/_comments.scss
@@ -4,16 +4,20 @@
     background: $grey;
     
     #comments-heading-wrapp {
-        height: 150px;
+        height: 180px;
         display: flex;
         justify-content: center;
         align-items: center;
 
         h1 {
+            margin-top: 5px;
             font-size: 32px;
-            text-decoration: underline $gold;
             font-weight: bold;
             font-family: 'Dancing Script', cursive;
         }
+    }
+
+    #comments-gap {
+        height: 60px;
     }
 }
