--- a/style/style.css
+++ b/style/style.css
@@ -1306,7 +1306,7 @@ footer #footer-links .footer-container i {
 }
 
 #comments #comments-heading-wrapp {
-  height: 150px;
+  height: 180px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1319,11 +1319,14 @@ footer #footer-links .footer-container i {
 }
 
 #comments #comments-heading-wrapp h1 {
+  margin-top: 5px;
   font-size: 32px;
-  -webkit-text-decoration: underline #c39d63;
-          text-decoration: underline #c39d63;
   font-weight: bold;
   font-family: 'Dancing Script', cursive;
+}
+
+#comments #comments-gap {
+  height: 60px;
 }
 
 * {
